fix slider spacing

--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 .mobileSlider {
     width: 400px;
+    margin-top: 100px;
     background-color: transparent;
     -webkit-appearance: none;
 }
